@@ -1,3 +1,13 @@
+2010-01-26  Chris Fleizach  <cfleizach@apple.com>
+
+        Another attempt to get this test to pass for GTK.
+
+        Add ability for image maps to be focused via tabbing
+        https://bugs.webkit.org/show_bug.cgi?id=17513
+
+        * fast/events/tab-imagemap-expected.txt:
+        * fast/events/tab-imagemap.html:
+
 2010-01-25  Darin Fisher  <darin@chromium.org>
 
         Reviewed by Brady Eidson.
